@@ -96,6 +96,7 @@
 \input{pageindepth.tex}
 \input{formindepth.tex}
 \input{guardindepth.tex}
+\input{woven-reference.tex}
 
 \chapter{Dot Products}
 
