@@ -100,6 +100,7 @@ of the day</q> server.  Current code for the server is in
     <li><a href="guardindepth.html">Guard in Depth</a></li>
     <li><a href="livepage.html">LivePage</a></li>
     <li><a href="pageindepth.html">Page in Depth</a></li>
+    <li><a href="woven-reference.html">Woven Widget Reference</a></li>
     </ul>
 </li>
 
